# oifv

./: CODEOWNERS  Cargo.toml  README.md
oifv-client/src/: main.rs
oifv-server/: Cargo.toml
oifvctl/: initialize_debian.sh
