[package]
name = "oifv"
version = "0.1.0"
authors = ["The OIFV Community Authors"]
license = "LICENSE-APACHE"
description = "GPU Virtualization Layer for GPU Memory and GPU Compute"
homepage = "https://github.com/oifv-ai/oifv"
edition = "2021"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
tokio = {version = "1.14.0", features = ["full"]}
